--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="./App.js"></script> -->
-    <script src="./promise.js"></script>
+    <!-- <script src="./promise.js"></script> -->
+    
     <title>javascript Promise</title>
 </head>
 <body>
     <h3>javascript Promise</h3>
-    
+
+    <div class="first">The First String on Click Make Red after 1 Second.</div>
+    <div class="second">The Second Sring go Green after 2 Second.</div>
+    <div class="third">The Third String go Blue after 3 second</div>
+    <br>
+    <button class="btn">Click Me</button>
+    <script src="./demo-promise.js"></script>
 </body>
 </html>
